<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:elevation="@dimen/general_padding"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="@dimen/general_padding"
                android:text="@string/sample_headline"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                
                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    android:ellipsize="end"
                    android:maxLines="6"
                    android:text="@string/sample_content"
                    android:textSize="15sp"/>

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher_foreground"
                    android:padding="@dimen/general_padding"
                    android:scaleType="centerCrop"/>


            </LinearLayout>

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="By Juode"
                android:textStyle="italic"
                android:textSize="13sp"
                android:textColor="@color/purple_700"
                android:padding="@dimen/general_padding"/>

            <TextView
                android:id="@+id/published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/published_at"
                android:textStyle="bold"
                android:textSize="12sp"
                android:padding="@dimen/general_padding"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>